2009-09-30  Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)

	* README: Move notes from the hand-edited part of INSTALL which
	was overwritten by Automake recently.

2009-09-26 Ivan Maidanski <ivmai@mail.ru>

	* aclocal.m4: Regenerate (by autoreconf -vif).
	* config.guess: Ditto.
	* config.sub: Ditto.
	* configure: Ditto.
	* INSTALL: Ditto.
	* Makefile.in: Ditto.
	* doc/Makefile.in: Ditto.
	* src/config.h.in: Ditto.
	* src/Makefile.in: Ditto.
	* src/atomic_ops/Makefile.in: Ditto.
	* src/atomic_ops/sysdeps/Makefile.in: Ditto.
	* tests/Makefile.in: Ditto.

2009-09-25 Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)

	* configure.ac: Replace AC_PROG_CC with AM_PROG_CC_C_O.

2009-09-16 Ivan Maidanski <ivmai@mail.ru>
	* ChangeLog: Remove trailing spaces at EOLn.
	* doc/README.txt: Expand all tabs to spaces; remove trailing
	spaces at EOLn; remove multiple trailing blank lines.
	* src/atomic_ops.c: Ditto.
	* src/atomic_ops.h: Ditto.
	* src/atomic_ops/generalize-small.h: Ditto.
	* src/atomic_ops/generalize.h: Ditto.
	* src/atomic_ops/sysdeps/acquire_release_volatile.h: Ditto.
	* src/atomic_ops/sysdeps/aligned_atomic_load_store.h: Ditto.
	* src/atomic_ops/sysdeps/all_aligned_atomic_load_store.h: Ditto.
	* src/atomic_ops/sysdeps/all_atomic_load_store.h: Ditto.
	* src/atomic_ops/sysdeps/ao_t_is_int.h: Ditto.
	* src/atomic_ops/sysdeps/armcc/arm_v6.h: Ditto.
	* src/atomic_ops/sysdeps/atomic_load_store.h: Ditto.
	* src/atomic_ops/sysdeps/char_acquire_release_volatile.h: Ditto.
	* src/atomic_ops/sysdeps/char_atomic_load_store.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/alpha.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/arm.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/hppa.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/ia64.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/m68k.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/mips.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/powerpc.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/s390.h: Ditto.
	* src/atomic_ops/sysdeps/gcc/sparc.h: Ditto.