@@ -1,3 +1,9 @@
+2009-10-01  Ivan Maidanski <ivmai@mail.ru>
+
+	* src/atomic_ops/sysdeps/gcc/x86.h: Remove spaces preceding '#'
+	for the preprocessor directives.
+	* src/atomic_ops/sysdeps/sunc/x86.h: Ditto.
+
 2009-09-30  Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)
 
 	* README: Move notes from the hand-edited part of INSTALL which
